@@ -4,6 +4,7 @@ import FightPredictor.FightPredictor;
 import FightPredictor.ml.ModelUtils;
 import FightPredictor.patches.com.megacrit.cardcrawl.combat.CombatPredictionPatches;
 import FightPredictor.util.BaseGameConstants;
+import basemod.BaseMod;
 import battleaimod.ValueFunctions;
 import com.badlogic.gdx.math.MathUtils;
 import com.megacrit.cardcrawl.cards.AbstractCard;
@@ -63,7 +64,7 @@ public class BattleAiController implements Controller {
     public int turnsLoaded = 0;
 
     private long startTime = 0;
-    public final int expectedDamage;
+    public int expectedDamage = 0;
 
     public BattleAiController(SaveState state, int maxTurnLoads) {
         SaveStateMod.runTimes = new HashMap<>();
@@ -77,10 +78,18 @@ public class BattleAiController implements Controller {
         System.err.println("loading state from constructor");
         startingState.loadState();
 
-        float prediction = FightPredictor.model.predict(ModelUtils.getBaseInputVector());
-        expectedDamage = MathUtils.round(prediction * 100);
+        if (BaseMod.hasModID("FightPredictor:")) {
+            try {
+                float prediction = FightPredictor.model.predict(ModelUtils.getBaseInputVector());
+                expectedDamage = MathUtils.round(prediction * 100);
+            } catch (Exception e) {
+                // This can happen either because the model doesn't support something or the mod isn't
+                // installed
+            }
 
-        runPredictions();
+            runPredictions();
+        }
+
         this.maxTurnLoads = maxTurnLoads;
     }
 
@@ -100,22 +109,37 @@ public class BattleAiController implements Controller {
         // Get the character's card pool
         ArrayList<AbstractCard> unupgradedCards = new ArrayList<>();
         switch (AbstractDungeon.player.chosenClass) {
-            case IRONCLAD: CardLibrary.addRedCards(unupgradedCards); break;
-            case THE_SILENT: CardLibrary.addGreenCards(unupgradedCards); break;
-            case DEFECT: CardLibrary.addBlueCards(unupgradedCards); break;
-            case WATCHER: CardLibrary.addPurpleCards(unupgradedCards); break;
-            default: return;
+            case IRONCLAD:
+                CardLibrary.addRedCards(unupgradedCards);
+                break;
+            case THE_SILENT:
+                CardLibrary.addGreenCards(unupgradedCards);
+                break;
+            case DEFECT:
+                CardLibrary.addBlueCards(unupgradedCards);
+                break;
+            case WATCHER:
+                CardLibrary.addPurpleCards(unupgradedCards);
+                break;
+            default:
+                return;
         }
 
         // Make copies of cards to protect from concurency problems
         // Add the upgraded cards to the pool
-        List<AbstractCard> cardPool = unupgradedCards.stream().map(AbstractCard::makeCopy).collect(Collectors.toList());
-        List<AbstractCard> upgradedPool = cardPool.stream().map(AbstractCard::makeCopy).collect(Collectors.toList());;
+        List<AbstractCard> cardPool = unupgradedCards.stream().map(AbstractCard::makeCopy)
+                                                     .collect(Collectors.toList());
+        List<AbstractCard> upgradedPool = cardPool.stream().map(AbstractCard::makeCopy)
+                                                  .collect(Collectors.toList());
         upgradedPool.forEach(AbstractCard::upgrade);
         cardPool.addAll(upgradedPool);
 
-        List<AbstractCard> playerCards = new ArrayList<>(AbstractDungeon.player.masterDeck.group).stream().map(AbstractCard::makeCopy).collect(Collectors.toList());
-        List<AbstractRelic> playerRelics = new ArrayList<>(AbstractDungeon.player.relics).stream().map(AbstractRelic::makeCopy).collect(Collectors.toList());
+        List<AbstractCard> playerCards = new ArrayList<>(AbstractDungeon.player.masterDeck.group)
+                .stream().map(AbstractCard::makeCopy).collect(Collectors.toList());
+        List<AbstractRelic> playerRelics = new ArrayList<>(AbstractDungeon.player.relics).stream()
+                                                                                         .map(AbstractRelic::makeCopy)
+                                                                                         .collect(Collectors
+                                                                                                 .toList());
         int startingHealth = AbstractDungeon.player.currentHealth;
         int maxHealth = AbstractDungeon.player.maxHealth;
 
@@ -124,12 +148,14 @@ public class BattleAiController implements Controller {
         elitesAndBosses.addAll(BaseGameConstants.eliteIDs.get(AbstractDungeon.actNum));
         elitesAndBosses.add(AbstractDungeon.bossKey);
         if (AbstractDungeon.actNum < 4) {
-            elitesAndBosses.addAll(BaseGameConstants.elitesAndBossesByAct.get(AbstractDungeon.actNum + 1));
+            elitesAndBosses
+                    .addAll(BaseGameConstants.elitesAndBossesByAct.get(AbstractDungeon.actNum + 1));
         }
         long end = System.currentTimeMillis();
 
         new Thread(() -> {
-            FightPredictor.getPercentiles(cardPool, playerCards, playerRelics, startingHealth, maxHealth, elitesAndBosses);
+            FightPredictor
+                    .getPercentiles(cardPool, playerCards, playerRelics, startingHealth, maxHealth, elitesAndBosses);
 
             System.err.println(" predictions " + FightPredictor.percentiles.entrySet());
         }).start();
